=======================
Stalker Pyramid Changes
=======================

0.1.0.b2
========

* **New:** Stalker_Pyramid now uses a brand new implementation for the
  gantt chart which utilizes a DGrid with OnDemand capabilities. The new Gantt
  Chart is over 100x faster then the previous implementation.
* **Update:** Started to move the view designs towards a RESTFul Service style.

0.1.0.b1
========

* **Update:** The Pyramid part of Stalker is moved in to a new package (this
  one).
* **Fix:** Fixed DBSession, it is now configured with ZopeTransactionExtension
  independent of Stalkers own configuration.
* **Fix:** Fixed TimeLog update dialog timing bug. TimeTextBox values are set
  by 'set' method.
* **New:** Hierarchical names of the task are added to Task Tool Tip window.
* **New:** Hierarchical names of the task are added to Create/Update TimeLog
  dialog.
* **New:** It is now possible to duplicate a task hierarchy in gantt chart now.
* **Update:** In the summary page of Task update dialog is called based on
  task entity type.
* **New:** Update Asset MenuItem is added to right click menu on assets list
  row.
* **Update:** In Update Asset Dialog 'code' attribute is enabled to edit.
* **New:** Update Shot MenuItem is added to right click menu on shots list row.
* **Update:** In Update Shot Dialog 'code' attribute is enabled to edit.
* **New:** Update Sequence MenuItem is added to right click menu on sequences
    list row.
* **Update:** In Update Sequence Dialog 'code' attribute is enabled to edit.
* **Fix:** In Update Asset Dialog type attribute is set with value that is set
    before.
* **Fix:** Based on user permissions Studio menu is redefined.
* **New:** In List Assets Page, code of asset is added to name column.
* **New:** BID timing is added to task tooltip list.
* **Fix:** In Update Vacation Dialog predefined dates are set to dialog date
    boxes.
* **Fix:** In task dialog window submit button is disabled until resources and
    task list is loaded.